# Coffee-Shop-Profit-Predictor

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: locations_candidates.csv  locations_train.csv
outputs/: feature_importance.csv  metrics.json  model.joblib  model_comparison.csv  model_metadata.json  predictions_all.csv  predictions_test.csv  predictions_train.csv  scored_candidates.csv
src/: config.py  create_db.py  queries.sql  score_new_sites.py  train_regression.py  utils.py
src/coffee_shop_predictor/: __init__.py  config.py  create_db.py  generate_data.py  run_pipeline.py  score_new_sites.py  train_regression.py  utils.py
tests/: test_generate_data.py  test_pipeline.py  test_scoring.py  test_training.py  test_workflow.py
