[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-shop-profit-predictor"
version = "0.1.0"
description = "Predict monthly profit of candidate coffee-shop locations with SQL feature engineering and a scikit-learn regression workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Amir Honardoust" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pre-commit"]

[project.scripts]
coffee-build-db = "coffee_shop_predictor.create_db:main"
coffee-train = "coffee_shop_predictor.train_regression:main"
coffee-score = "coffee_shop_predictor.score_new_sites:main"
coffee-pipeline = "coffee_shop_predictor.run_pipeline:main"
coffee-generate-data = "coffee_shop_predictor.generate_data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coffee_shop_predictor = ["queries.sql"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
